[package]
name = "bastion-rs"
version = "0.2.0"
edition = "2021"
description = "Rust port of the Bastion trading agent CLI."
license = "MIT"
repository = "https://github.com/adrydevel/bastion-rs"

[[bin]]
name = "bastion"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
